No longer allowing zooming because site looks crap on iOS when zoomed. Body is 100% on mobile and contents slightly padded

--- a/app/css/media_queries.scss
+++ b/app/css/media_queries.scss
@@ -2,7 +2,11 @@
 
 @media #{$small-only} {
   .row {
-    max-width: 95%;
+    max-width: 100%;
+  }
+
+  .uiview div.row:first-of-type {
+    padding: 0 rem-calc(4px) 0 rem-calc(4px);
   }
 
   /* Login */
